--- a/package.json
+++ b/package.json
@@ -160,7 +160,8 @@
     "@rollup/plugin-alias": "3.1.9",
     "@types/uuid": "8.3.4",
     "postcss": "8.4.14",
-    "autoprefixer": "10.4.7"
+    "autoprefixer": "10.4.7",
+    "@heroicons/react": "1.0.6"
   },
   "dependencies": {
     "react": "^17.0.2",
