--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "onCommand:newlitoshow.createMacro",
     "onCommand:newlitoshow.saveMacro",
     "onCommand:newlitoshow.refreshMacro",
-    "onCommand:newlitoshow.playMacro",
+    "onCommand:litoshow.playMacro",
     "onCommand:newlitoshow.removeMacro",
     "onCommand:newlitoshow.viewPlayer",
     "onView:litoshow-sidebar",
@@ -27,7 +27,7 @@
         {
           "id": "litoshow-sidebar-view",
           "title": "Lito Show",
-          "icon": "media/replay.svg"
+          "icon": "media/litoshow-white.svg"
         },
         {
           "id": "litoshow-step-tree",
@@ -69,7 +69,7 @@
       ],
       "view/item/context": [
         {
-          "command": "newlitoshow.playMacro",
+          "command": "litoshow.playMacro",
           "group": "inline",
           "when": "view == litoshow-tree"
         },
@@ -109,7 +109,7 @@
         "icon": "media/refresh.svg"
       },
       {
-        "command": "newlitoshow.playMacro",
+        "command": "litoshow.playMacro",
         "category": "Litoshow",
         "title": "Play",
         "icon": "media/play.svg"
@@ -169,7 +169,8 @@
     "module-alias": "^2.2.2",
     "uuid": "8.3.2",
     "rc-slider": "10.0.0",
-    "tailwindcss": "3.0.24"
+    "tailwindcss": "3.0.24",
+    "@headlessui/react": "1.6.5"
   },
   "_moduleAliases": {
     "@componentes": "out",
