--- a/package.json
+++ b/package.json
@@ -15,13 +15,10 @@
     "onCommand:newlitoshow.saveMacro",
     "onCommand:newlitoshow.refreshMacro",
     "onCommand:litoshow.selectMacro",
-    "onCommand:newlitoshow.removeMacro",
+    "onCommand:litoshow.removeMacro",
     "onCommand:newlitoshow.viewPlayer",
     "onView:litoshow-sidebar",
-    "onView:litoshow-tree",
-    "onCommand:litoshow.experiment.recordMacro",
-    "onCommand:litoshow.experiment.playMacro",
-    "onCommand:litoshow.experiment.deleteMacro"
+    "onView:litoshow-tree"
   ],
   "main": "./dist/extension.js",
   "contributes": {
@@ -77,7 +74,7 @@
           "when": "view == litoshow-tree"
         },
         {
-          "command": "newlitoshow.removeMacro",
+          "command": "litoshow.removeMacro",
           "group": "inline",
           "when": "view == litoshow-tree"
         }
@@ -100,7 +97,7 @@
         "title": "Save Macro"
       },
       {
-        "command": "newlitoshow.removeMacro",
+        "command": "litoshow.removeMacro",
         "category": "Litoshow",
         "title": "Remove Macro",
         "icon": "media/trash.svg"
@@ -156,21 +153,6 @@
         "command": "litoshow.updateClientList",
         "category": "Litoshow",
         "title": "Update Client List"
-      },
-      {
-        "command": "litoshow.experiment.recordMacro",
-        "category": "Litoshow",
-        "title": "Record Macro(Experiment)"
-      },
-      {
-        "command": "litoshow.experiment.playMacro",
-        "key": "cmd+shift+t p",
-        "title": "Play Macro(Experiment)"
-      },
-      {
-        "command": "litoshow.experiment.saveMacro",
-        "key": "cmd+shift+t s",
-        "title": "Save Macro(Experiment)"
       }
     ]
   },
@@ -219,7 +201,8 @@
     "rc-slider": "10.0.0",
     "tailwindcss": "3.0.24",
     "@headlessui/react": "1.6.5",
-    "p-queue": "7.2.0"
+    "p-queue": "7.2.0",
+    "@szhsin/react-menu": "3.1.1"
   },
   "_moduleAliases": {
     "@componentes": "out",
