--- a/package.json
+++ b/package.json
@@ -202,7 +202,8 @@
     "tailwindcss": "3.0.24",
     "@headlessui/react": "1.6.5",
     "p-queue": "7.2.0",
-    "@szhsin/react-menu": "3.1.1"
+    "@szhsin/react-menu": "3.1.1",
+    "fs-extra": "7.0.0"
   },
   "_moduleAliases": {
     "@componentes": "out",
