--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "onCommand:litoshow.removeMacro",
     "onCommand:litoshow.insertStop",
     "onCommand:newlitoshow.viewPlayer",
-    "onView:litoshow-sidebar",
-    "onView:litoshow-tree"
+    "onView:litoshow-sidebar"
   ],
   "main": "./dist/extension.js",
   "contributes": {
@@ -174,7 +173,8 @@
     "@headlessui/react": "1.6.5",
     "p-queue": "7.2.0",
     "@szhsin/react-menu": "3.1.1",
-    "fs-extra": "7.0.0"
+    "fs-extra": "7.0.0",
+    "@vscode/webview-ui-toolkit": "1.0.0"
   },
   "_moduleAliases": {
     "@componentes": "out",
