--- a/package.json
+++ b/package.json
@@ -91,14 +91,9 @@
         "title": "Pause Macro"
       },
       {
-        "command": "newlitoshow.viewPlayer",
-        "category": "Litoshow",
-        "title": "View Player"
-      },
-      {
         "command": "litoshow.insertStop",
         "category": "Litoshow",
-        "title": "Insert Stop"
+        "title": "Insert Stop Point"
       }
     ]
   },
