--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "litoshow",
   "displayName": "LitoShow",
   "publisher": "Fernando Palacios",
-  "description": "Record coding tutorials using macros",
+  "description": "Playback your code using macros on VSCode",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.67.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fernandops26/litoshow-vscode.git"
+  },
   "categories": [
     "Other"
   ],
+  "icon": "media/litoshow-logo-128x128.png",
   "galleryBanner": {
     "color": "#DA2867",
     "theme": "dark"
