--- a/package.json
+++ b/package.json
@@ -156,7 +156,9 @@
     "p-queue": "7.2.0",
     "@szhsin/react-menu": "3.1.1",
     "fs-extra": "7.0.0",
-    "@vscode/webview-ui-toolkit": "1.0.0"
+    "@vscode/webview-ui-toolkit": "1.0.0",
+    "@tinyhttp/app": "2.0.22",
+    "@supabase/supabase-js": "1.35.6"
   },
   "_moduleAliases": {
     "@componentes": "out",
